--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-.theia/
-debug_custom.json
-esp32.vsd
-esp32s3.svd
-debug.cfg
-
-SomfyController.ino.XIAO_ESP32S3.bin
-SomfyController.ino.esp32c3.bin
-SomfyController.ino.esp32s2.bin
-.vscode/settings.json
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
