--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	links2004/WebSockets@^2.7.0
 	knolleary/PubSubClient@^2.8
     lsatan/SmartRC-CC1101-Driver-Lib@^2.5.7
+board_build.filesystem = littlefs
